kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-users
  labels:
    app: ms-users
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ms-users
  template:
    metadata:
      labels:
        app: ms-users
    spec:
      containers:
        - name: ms-users
          image: wilderherrera10/ms-users:v2
          ports:
            - containerPort: 9095
