kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-users
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9095
  selector:
    app: ms-users
